--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "flatpickr": "^4.6.13",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "sass": "^1.53.0",
